---
config:
  theme: default
  layout: elk
---
classDiagram
direction TB

class BaseModel {
    +id
    +created_by
    +updated_by
    +created_at
    +update_at
}

class User {
    +first_name
    +last_name
    +email
    +password
    +is_admin
    +register()
    +update()
    +delete()
}

class Place {
    +title
    +description
    +price
    +latitude
    +longitude
    +owner
    +amenities
    +create()
    +update()
    +delete()
    +list_places()
}

class Amenity {
    +name
    +description
    +create()
    +update()
    +delete()
    +list_amenities()
}

class Review {
    +place
    +user
    +rating
    +comment
    +create()
    +update()
    +delete()
    +list_reviews()
}

User --|> BaseModel
Place --|> BaseModel
Amenity --|> BaseModel
Review --|> BaseModel

Amenity "n" -- "n" Place : Association
User "0" --* "n" Place
User "0" --* "n" Review
Place "0" --* "n" Review
